...
  projectItems?: LinkedProject[];
  headerTitle?: string;
  buttons?: HeaderToolBarButton[];
}

export const HEADER_TOOLBAR_TEMPLATES = {
  back: { id: 'toolbar-back', type: 'back' } as HeaderToolBarButton,
  linkedProjects: {
    id: 'toolbar-linked',
    type: 'linkedProjects',
  } as HeaderToolBarButton,
  headerTitle: {
    id: 'toolbar-headerTitle',
...
  create: { id: 'toolbar-create', type: 'create' } as HeaderToolBarButton,
  hamburger: {
    id: 'toolbar-hamburger',
    type: 'hamburger',
  } as HeaderToolBarButton,
  bookmark: { id: 'toolbar-bookmark', type: 'bookmark' } as HeaderToolBarButton,
  share: { id: 'toolbar-share', type: 'share' } as HeaderToolBarButton,
  delete: { id: 'toolbar-delete', type: 'delete' } as HeaderToolBarButton,
  navigationListScreen: {
    id: 'toolbar-navigationListScreen',
    type: 'navigationListScreen',
  } as HeaderToolBarButton,
  rightButtonGroup: {
...
