...
        <Animated.View style={{ opacity: listButtonOpacity }}>
          <ArrowButton
            label={listButtonLabel}
            containerClassName={styles.arrowButton}
            labelClassName={styles.arrowButtonLabel}
            onPress={onPressListButton}
            testID="drafts-list-button"
          />
        </Animated.View>
      )}
    </Animated.View>
  );
}
...
