...
      <View style={styles.container}>
        <View style={styles.appLogoContainer}>
          <AppLogo />
        </View>
        <View style={styles.formControlContainer}>
          <EditableFormControl
            label="Your Email"
            darkMode
            formValue={email}
            onChangeText={setEmail}
            placeholder={PLACEHOLDERS.signIn.emailInput}
          />
          <EditableFormControl
...
          <GoogleIcon width={20} height={20} />
          <Text style={styles.googleButtonLabel}>Google でログイン</Text>
        </Pressable>
        <View style={styles.registerLinkContainer}>
          <Text style={styles.registerLinkLabel}>アカウントはお持ちですか？</Text>
          <Pressable onPress={() => navigation.navigate('Register')}>
            <Text style={styles.registerLinkText}>新規登録へ</Text>
          </Pressable>
        </View>
      </View>
    </TouchableWithoutFeedback>
  );
}
...
